[B]1.0.0:[/B]
Initial version

[B]2.0.0:[/B]
Version bump for eden, nothing changed

[B]2.0.1:[/B]
Filter paywall items from listing